test_programs/compile_failure/global_captured_closure/src/main.nr
global ADD_ONE: fn[(Field,)](Field) -> Field = {
    let offset = 1;
    |x: Field| x + offset
};

fn main(x: Field) -> pub Field {
    ADD_ONE(x)
}
